[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.49"
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-loki = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
